# manatees

./: FINAL_REPORT.md  PROGRESS_REPORT.md  README.md  bun.lockb  metamia_results.csv
assignments/: overview.md
backend/: Dockerfile  README.md
client/: Dockerfile  README.md  bun.lockb
client/src/lib/: api.ts
cs410-py-orchestrator/: pyproject.toml
cs410-py-orchestrator/tests/: test_cs410_py_orchestrator.py
cs410-ui-client/: package-lock.json  package.json
cs410-ui-client/src/: App.tsx  SearchBox.tsx
cs410-ui-client/src/lib/: api.ts
orchestrator/: README.md  pyproject.toml
orchestrator/app/: main.py
orchestrator/app/core/: config.py
