[tool.poetry]
name = "cs410-py-orchestrator"
version = "0.1.0"
description = ""
authors = ["Luis E. Fernandez de la Vara. <luis@lefv.info>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
